# llm-classification

./: .gitignore  main.py  pyproject.toml  test.py
data/: historic.csv  predictions.csv  to_predict.csv  to_predict_small copy.csv
src/: agent.py  configs.py  data_processing.py  embedding_models.py  llm_tools.py  main.py  models.py  predict.py  prompt_template.py  vector_store.py
src/agent/: base.py
src/data_processing/: data_processing.py
src/models/: embedding_models.py
src/retrieval/: llm_retrieval.py
src/storage/: __init__.py  base.py  faiss.py
src/utils/: config.py  data_models.py  device.py
