[tool.poetry]
name = "llm-classification"
version = "0.1.0"
description = ""
authors = ["shubhamlyric <shubham@lyric.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"
langchain = "^0.3.0"
scikit-learn = "^1.5.2"
pinecone-client = "^5.0.1"
sentence-transformers = "^3.1.1"
anthropic = "^0.34.2"
openai = "^1.47.0"
polars = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
